[package]
name = "ping-server"
version = "0.1.1"
edition = "2021"
authors = ["Myles Empty Best"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.4"
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
derive-getters = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.7.0"
lazy_static = "1.4.0"
